# Data-Sample

./: .gitattributes  LICENSE  Makefile.am  Makefile.in  coindatasample.pc.in  configure  configure.ac  meson.build  share2qp.mps
